{
  "version": 4,
  "terraform_version": "1.7.0",
  "serial": 24,
  "lineage": "7e8d2e28-2e5c-87c4-3b00-a3edf97f3925",
  "resources": [
    {
      "module": "module.alb-asg",
      "mode": "managed",
      "type": "aws_alb",
      "name": "application_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:809215934314:loadbalancer/app/dev-pet-clinic-alb/9675d1eced32e006",
            "arn_suffix": "app/dev-pet-clinic-alb/9675d1eced32e006",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "dev-pet-clinic-alb-831351933.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:809215934314:loadbalancer/app/dev-pet-clinic-alb/9675d1eced32e006",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "dev-pet-clinic-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-052513704e3eea119"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-084e39bb946da4b95"
              },
              {
                "subnet_id": "subnet-09f37e375dd13cdec"
              },
              {
                "subnet_id": "subnet-0c5619569c9943136"
              }
            ],
            "subnets": [
              "subnet-084e39bb946da4b95",
              "subnet-09f37e375dd13cdec",
              "subnet-0c5619569c9943136"
            ],
            "tags": {
              "Application": "pet-clinic",
              "CostCenter": "techiescamp-commerce",
              "Environment": "dev",
              "Name": "dev-pet-clinic-alb",
              "Owner": "techiescamp"
            },
            "tags_all": {
              "Application": "pet-clinic",
              "CostCenter": "techiescamp-commerce",
              "Environment": "dev",
              "Name": "dev-pet-clinic-alb",
              "Owner": "techiescamp"
            },
            "vpc_id": "vpc-0bcc57fea354dce81",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "module.alb-asg.aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.alb-asg",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "application_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:809215934314:listener/app/dev-pet-clinic-alb/9675d1eced32e006/4ed4b1a07158da19",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:809215934314:targetgroup/pc-alb20240122112133619500000001/d691944a82db5d4a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:809215934314:listener/app/dev-pet-clinic-alb/9675d1eced32e006/4ed4b1a07158da19",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:809215934314:loadbalancer/app/dev-pet-clinic-alb/9675d1eced32e006",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb-asg.aws_alb.application_load_balancer",
            "module.alb-asg.aws_alb_target_group.petclinic",
            "module.alb-asg.aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.alb-asg",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "petclinic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:809215934314:targetgroup/pc-alb20240122112133619500000001/d691944a82db5d4a",
            "arn_suffix": "targetgroup/pc-alb20240122112133619500000001/d691944a82db5d4a",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "8080",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:809215934314:targetgroup/pc-alb20240122112133619500000001/d691944a82db5d4a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "pc-alb20240122112133619500000001",
            "name_prefix": "pc-alb",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Application": "pet-clinic",
              "CostCenter": "techiescamp-commerce",
              "Environment": "dev",
              "Name": "dev-pet-clinic-alb-target-group",
              "Owner": "techiescamp"
            },
            "tags_all": {
              "Application": "pet-clinic",
              "CostCenter": "techiescamp-commerce",
              "Environment": "dev",
              "Name": "dev-pet-clinic-alb-target-group",
              "Owner": "techiescamp"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0bcc57fea354dce81"
          }
        }
      ]
    },
    {
      "module": "module.alb-asg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:809215934314:security-group/sg-052513704e3eea119",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-052513704e3eea119",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "dev-pet-clinic-alb-sg20240122112133622100000002",
            "name_prefix": "dev-pet-clinic-alb-sg",
            "owner_id": "809215934314",
            "revoke_rules_on_delete": false,
            "tags": {
              "Application": "pet-clinic",
              "CostCenter": "techiescamp-commerce",
              "Environment": "dev",
              "Name": "dev-pet-clinic-alb-sg",
              "Owner": "techiescamp"
            },
            "tags_all": {
              "Application": "pet-clinic",
              "CostCenter": "techiescamp-commerce",
              "Environment": "dev",
              "Name": "dev-pet-clinic-alb-sg",
              "Owner": "techiescamp"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bcc57fea354dce81"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.alb-asg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:809215934314:security-group/sg-07e17152b7aa90f6f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07e17152b7aa90f6f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-052513704e3eea119"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "dev-pet-clinic-instance-sg20240122112142848200000004",
            "name_prefix": "dev-pet-clinic-instance-sg",
            "owner_id": "809215934314",
            "revoke_rules_on_delete": false,
            "tags": {
              "Application": "pet-clinic",
              "CostCenter": "techiescamp-commerce",
              "Environment": "dev",
              "Name": "dev-pet-clinic-asg-sg",
              "Owner": "techiescamp"
            },
            "tags_all": {
              "Application": "pet-clinic",
              "CostCenter": "techiescamp-commerce",
              "Environment": "dev",
              "Name": "dev-pet-clinic-asg-sg",
              "Owner": "techiescamp"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bcc57fea354dce81"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb-asg.aws_security_group.alb_sg"
          ]
        }
      ]
    }
  ]
}